# UAV-GroundSensors-Testbed

./: README.md
RaspberryPi/docs/: RPI_README.md
RaspberryPi/uav-data-collection/data-collection/: read_data.py  store_data.py
RaspberryPi/uav-data-collection/data-transfer/: data_transfer.py  wifi_connection.py
UAV/data_collection_ros/: build.sh  clean.sh  ros_environment.sh  run_mission.sh
UAV/data_collection_ros/catkin_ws/src/drone_comm/: CMakeLists.txt  package.xml
UAV/data_collection_ros/catkin_ws/src/drone_comm/scripts/: communication.py
UAV/data_collection_ros/catkin_ws/src/drone_flight/: CMakeLists.txt  package.xml
UAV/data_collection_ros/catkin_ws/src/drone_flight/launch/: mission.launch
UAV/data_collection_ros/catkin_ws/src/drone_flight/src/: flight_execution.cpp  manager.cpp
UAV/data_collection_ros/sensor_configurations/: sample_config.txt
UAV/docs/: UAV_README.md
